# numpy

./: .appveyor.yml  .bento_travisci.sh  .bzrignore  .cirrus.star  .clang-format  .codecov.yml  .coverage  .coveragerc  .ctags.d  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .hadolint.yaml  .lgtm.yml  .mailmap  .pre-commit-config.yaml  .project  .pydevproject  .travis-make-py24-virtualenv.sh  .travis.sh  .travis.yml  20240720RHTEST.ipynb  22137.new_feature.rst  240204 test.ipynb  =0.13.1  AddToReadme.txt  AddtoReadme.txt  Analyzing Sales Data.py  BENTO_BUILD.txt  CITATION.bib  CITATION.cff  COMPATIBILITY  CONTRIBUTING.md  CONTRIBUTING.rst  DEV_README.txt  Dummy_1.py  Dummy_feature.py  (+154 more)
meson_cpu/: main_config.h.in  meson.build
meson_cpu/arm/: meson.build
meson_cpu/debug/: meson.build
meson_cpu/e2k/: meson.build
meson_cpu/log/: meson.build
meson_cpu/loongarch/: meson.build
meson_cpu/loongarch64/: meson.build
meson_cpu/ppc64/: meson.build
meson_cpu/riscv64/: meson.build
meson_cpu/s390x/: meson.build
meson_cpu/x86/: meson.build  test_x86_v2.c  test_x86_v3.c  test_x86_v4.c
numpy/: __config__.py.in  __config__.pyi  __init__.cython-30.pxd  __init__.pxd  __init__.py  __init__.pyi  _array_api_info.py  _array_api_info.pyi  _distributor_init.py  _expired_attrs_2_0.py  _gitversion.py  _globals.py  _globals.pyi  _import_tools.py  _main_namespace_definition.py  _pytesttester.py  _pytesttester.pyi  _thread_safe_dot.py  _utils.py  _version.py  add_newdocs.py  array_api.py  bento.info  char.pyi  conftest.py  ctypeslib.py  ctypeslib.pyi  dtypes.py  dtypes.pyi  dual.py  emath.pyi  exceptions.py  exceptions.pyi  matlabequivalent.py  matlib.py  matlib.pyi  meson.build  rec.pyi  setup.py  setupscons.py  (+9 more)
numpy/_array_api/: __init__.py  _array_object.py  _constants.py  _creation_functions.py  _data_type_functions.py  _dtypes.py  _elementwise_functions.py  _linear_algebra_functions.py  _manipulation_functions.py  _searching_functions.py  _set_functions.py  _sorting_functions.py  _statistical_functions.py  _types.py  _typing.py  _utility_functions.py  constants.py  creation_functions.py  dtypes.py  elementwise_functions.py  linalg.py  linear_algebra_functions.py  manipulation_functions.py  searching_functions.py  set_functions.py  sorting_functions.py  statistical_functions.py  utility_functions.py
numpy/_build_utils/: README  __init__.py  apple_accelerate.py  common.py  compiler_helper.py  conv_template.py  copyfiles.py  cythoner.py  gcc_build_bitness.py  gitversion.py  link-version-pyinit.map  process_src_template.py  setup.py  tempita.py  waf.py
numpy/_core/: __init__.py  __init__.pyi  _add_newdocs.py  _add_newdocs_scalars.py  _asarray.py  _asarray.pyi  _blas_version_check.py  _ctrace.py  _dtype.py  _dtype.pyi  _dtype_ctypes.py  _exceptions.py  _exceptions.pyi  _internal.py  _internal.pyi  _machar.py  _methods.py  _methods.pyi  _printoptions.py  _simd.pyi  _string_helpers.py  _type_aliases.py  _type_aliases.pyi  _ufunc_config.py  _ufunc_config.pyi  _umath_tests.pyi  arrayprint.py  arrayprint.pyi  check_longdouble.c  config.h.in  cversions.py  defchararray.py  defchararray.pyi  einsumfunc.py  einsumfunc.pyi  feature_detection_cmath.h  feature_detection_math.h  feature_detection_stdio.h  fromnumeric.py  fromnumeric.pyi  (+26 more)
numpy/_pyinstaller/: hook-numpy.py  pyinstaller-smoke.py
numpy/_typing/: __init__.py  _add_docstring.py  _array_like.py  _callable.pyi  _char_codes.py  _dtype_like.py  _extended_precision.py  _generic_alias.py  _nbit.py  _nbit_base.py  _nbit_base.pyi  _nested_sequence.py  _scalars.py  _shape.py  _ufunc.py  _ufunc.pyi
numpy/_utils/: __init__.py  __init__.pyi  _config_helpers.py  _deprecations.py  _deprecations.pyi  _inspect.py  _inspect.pyi  _pep440.py  _pep440.pyi  keep.py  test_set_module.py
numpy/array_api/: __init__.py  _array_object.py  _constants.py  _creation_functions.py  _data_type_functions.py  _dtypes.py  _elementwise_functions.py  _indexing_functions.py  _linear_algebra_functions.py  _manipulation_functions.py  _searching_functions.py  _set_functions.py  _sorting_functions.py  _statistical_functions.py  _typing.py  _utility_functions.py  fft.py  linalg.py  setup.py
numpy/arraykit/: __init__.py  info.py
numpy/base/: getlimits.py  memmap.py  polynomial.py  setup.py
numpy/build_utils/: __init__.py  apple_accelerate.py  common.py  waf.py
numpy/char/: __init__.py  __init__.pyi
numpy/ci/: bazelrc  download_bazel.sh
numpy/compat/: __init__.py  __init__.pyi  _inspect.py  _pep440.py  py3k.py  setup.py  setupscons.py
numpy/core/: SConscript  SConstruct  __init__.py  __init__.pyi  _add_newdocs.py  _add_newdocs_scalars.py  _asarray.py  _asarray.pyi  _dtype.py  _dtype_ctypes.py  _exceptions.py  _expired_type_aliases.py  _indexer.py  _internal.py  _internal.pyi  _machar.py  _methods.py  _multiarray_umath.py  _mx_datetime_parser.py  _objectmath.py  _type_aliases.py  _type_aliases.pyi  _ufunc_config.py  _ufunc_config.pyi  _utils.py  arrayprint.py  arrayprint.pyi  bento.info  bscript  build_doc.txt  chararray.py  config.h.in  cversion.txt  cversions.py  datetimeutils.py  defchararray.py  defchararray.pyi  defmatrix.py  einsumfunc.py  einsumfunc.pyi  (+48 more)
numpy/corefft/: setup.py
numpy/corelinalg/: linalg.py
numpy/ctypeslib/: __init__.py  __init__.pyi  _ctypeslib.py  _ctypeslib.pyi
numpy/dft/: __init__.py  fftpack.py  fftpack_litemodule.c  helper.py  info.py  old.py  setup.py
numpy/distutils/: __init__.py  __version__.py  _msvccompiler.py  _shell_utils.py  armccompiler.py  ccompiler.py  ccompiler_opt.py  clang_cl.py  compat.py  conv_template.py  core.py  cpuinfo.py  environment.py  exec_command.py  extension.py  from_template.py  info.py  intelccompiler.py  interactive.py  lib2def.py  line_endings.py  log.py  mingw32ccompiler.py  misc_util.py  mlib.ini  msvc9compiler.py  msvccompiler.py  npy_pkg_config.py  npymath.ini  numpy_distribution.py  pathccompiler.py  pyas_template.py  setup.py  setupscons.py  sunccompiler.py  system_info.py  unixccompiler.py
numpy/doc/: CAPI.txt  DISTUTILS.txt  README.txt  (+29 more)
(+8157 files in other folders)
