option('blas', type: 'string', value: 'auto',
        description: 'Option for BLAS library selection. By default, try to find any in the order given by `blas-order`')
option('lapack', type: 'string', value: 'auto',
        description: 'Option for LAPACK library selection. By default, try to find any in the order given by `lapack-order`')
option('allow-noblas', type: 'boolean', value: true,
        description: 'If set to true, allow building with (slow!) internal fallback routines')
option('blas-order', type: 'array', value: ['auto'],
       description: 'Order of BLAS libraries to search for. E.g.: mkl,openblas,blis,blas')
option('lapack-order', type: 'array', value: ['auto'],
       description: 'Order of LAPACK libraries to search for. E.g.: mkl,openblas,lapack')
option('use-ilp64', type: 'boolean', value: false,
       description: 'Use ILP64 (64-bit integer) BLAS and LAPACK interfaces')
option('blas-symbol-suffix', type: 'string', value: 'auto',
        description: 'BLAS and LAPACK symbol suffix to use, if any')
option('mkl-threading', type: 'string', value: 'auto',
        description: 'MKL threading method, one of: `seq`, `iomp`, `gomp`, `tbb`')
option('disable-svml', type: 'boolean', value: false,
        description: 'Disable building against SVML')
option('disable-highway', type: 'boolean', value: false,
        description: 'Disables SIMD-optimized operations related to Google Highway')
option('disable-intel-sort', type: 'boolean', value: false,
        description: 'Disables SIMD-optimized operations related to Intel x86-simd-sort')
option('disable-threading', type: 'boolean', value: false,
        description: 'Disable threading support (see `NPY_ALLOW_THREADS` docs)')
option('enable-openmp', type: 'boolean', value: false,
        description: 'Enable building NumPy with openmp support')
option('disable-optimization', type: 'boolean', value: false,
        description: 'Disable CPU optimized code (dispatch,simd,unroll...)')
option('cpu-baseline', type: 'string', value: 'min',
        description: 'Minimal set of required CPU features')
option('cpu-baseline-detect', type: 'feature', value: 'auto',
        description: 'Detect CPU baseline from the compiler flags')
option('cpu-dispatch', type: 'string', value: 'max',
        description: 'Dispatched set of additional CPU features')
option('test-simd', type: 'array',
        value: [
          'BASELINE', 'X86_V2', 'X86_V3', 'X86_V4',
          'VSX', 'VSX2', 'VSX3', 'VSX4',
          'NEON', 'ASIMD',
          'VX', 'VXE', 'VXE2',
          'LSX',
        ],
        description: 'Specify a list of CPU features to be tested against NumPy SIMD interface')
option('test-simd-args', type: 'string', value: '',
        description: 'Extra args to be passed to the `_simd` module that is used for testing the NumPy SIMD interface')
